--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	//JSP 다운로드
 	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
 	implementation 'javax.servlet:jstl'
+	//Spring security
+	implementation("org.springframework.boot:spring-boot-starter-security")
 }
 
 tasks.named('test') {
