수정 및 추가

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-security")
 	//session
 	implementation 'org.springframework.session:spring-session-core'
+	//페이징라이브러리
+	implementation group: 'com.github.pagehelper', name: 'pagehelper-spring-boot-starter', version: '1.4.2'
 }
 
 tasks.named('test') {
