feat: 숙제내용수정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/dw?useUnicode=true&charaterEncoding=utf-8&serverTimezone=UTC
       username: root
-      password: rkddlstjr
+      password: acdg795!
    #jsp 경로 설정
    mvc:
       view:
