--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 	//페이징라이브러리
 	implementation group: 'com.github.pagehelper', name: 'pagehelper-spring-boot-starter', version: '1.4.2'
+	//excel
+	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
 }
 
 tasks.named('test') {
